# pii-api

./: .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  api_design.md  demo.py  infra_prd.md  masking_pipeline.md  mypy.ini  pii_masking_api_app.py  pyproject.toml  pytest.ini  quick_test.py  run_api.py  test_api.py  test_prd.md
src/pii_masking/: __init__.py
src/pii_masking/api/: __init__.py  main.py
src/pii_masking/config/: __init__.py  constants.py  regex_patterns.yaml  settings.py
src/pii_masking/core/: __init__.py  exceptions.py  interfaces.py  pipeline.py
src/pii_masking/processors/: __init__.py  ner.py  regex.py  risk_scorer.py  tokenizer.py  validator.py
tests/: __init__.py  test_api.py  test_simple.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: __init__.py  test_cache.py  test_config.py  test_interfaces.py  test_ner.py  test_pipeline.py  test_regex.py  test_risk_scorer.py  test_tokenizer.py  test_validator.py
