[tool.poetry]
name = "pii-masking-api"
version = "0.1.0"
description = "Lightweight CPU-based PII masking API"
authors = ["Your Name <you@example.com>"]
readme = "api_design.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
redis = {extras = ["hiredis"], version = "^5.0.7"}
onnxruntime = "^1.18.1"
sudachipy = "^0.6.8"
SudachiDict-core = "^20240409"
duckdb = "^1.0.0"
google-cloud-pubsub = "^2.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
locust = "^2.28.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 